file_manager: Do not return ARC tasks if a directory is selected

When the selection includes a directory, no ARC tasks should be returned.

BUG=627679
TEST=Cannot open a directory with ARC apps

Review-Url: https://codereview.chromium.org/2141373002
Cr-Commit-Position: refs/heads/master@{#405075}

Former-commit-id: 4699a16ee722fae35760559e179c7a4f8a53b1f0